--- a/index.html
+++ b/index.html
@@ -35,14 +35,10 @@
                 <span onclick="closeFullImg()">✖</span>
             </div>
             <div class="img-gallery">
-                <img src="https://cdn.pixabay.com/photo/2022/06/21/21/56/konigssee-7276585_960_720.jpg"
-                    onclick="openFullImg(this.src)">
-                <img src="https://cdn.pixabay.com/photo/2022/01/05/16/58/butterfly-6917552__340.jpg"
-                    onclick="openFullImg(this.src)">
-                <img src="https://cdn.pixabay.com/photo/2022/06/20/20/22/hedgehog-7274554__340.jpg"
-                    onclick="openFullImg(this.src)">
-                <img src="https://cdn.pixabay.com/photo/2022/05/18/17/09/hills-7205745_960_720.jpg"
-                    onclick="openFullImg(this.src)">
+                <img src="images/photo-1.jpg" onclick="openFullImg(this.src)">
+                <img src="images/photo-2.jpg" onclick="openFullImg(this.src)">
+                <img src="images/photo-3.jpg" onclick="openFullImg(this.src)">
+                <img src="images/photo-4.jpg" onclick="openFullImg(this.src)">
             </div>
         </section>
 
