--- a/index.html
+++ b/index.html
@@ -21,15 +21,29 @@
     </header>
 
     <main class="container">
+        <section class="about">
+            <h1>Heading 1</h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et aperiam, asperiores molestiae, aliquid, ea
+                in
+                vero saepe nobis cum magni dolorem quod labore non voluptas quis cumque eum consectetur ad.
+            </p>
 
-        <h1>Heading 1</h1>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et aperiam, asperiores molestiae, aliquid, ea in
-            vero saepe nobis cum magni dolorem quod labore non voluptas quis cumque eum consectetur ad.
-        </p>
+            <h2>Heading 2</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et aperiam, asperiores molestiae, aliquid, ea
+                in
+                vero saepe nobis cum magni dolorem quod labore non voluptas quis cumque eum consectetur ad.
+            </p>
+        </section>
 
         <section class="gallery">
-            <h2 class="top-space">Heading 2</h2>
+            <h3>Heading 3</h3>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et aperiam, asperiores molestiae, aliquid, ea
+                in
+                vero saepe nobis cum magni dolorem quod labore non voluptas quis cumque eum consectetur ad.
+            </p>
             <div class="popup" id="fullImgBox">
                 <img src="Memories 0.jpg" id="fullImg">
                 <span onclick="closeFullImg()">✖</span>
@@ -47,6 +61,7 @@
     <footer>
         <p class="container">&copy; Footer 2023</p>
     </footer>
+
     <script src="js/gallery.js"></script>
 </body>
 
