--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Gallery Example</title>
+    <title>Page 2</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -14,8 +14,8 @@
         <div class="container flex">
             <h1>Company Name</h1>
             <nav>
-                <a href="/" class="active">Home</a>
-                <a href="page2.html">Page 2</a>
+                <a href="/">Home</a>
+                <a href="#" class="active">Page 2</a>
             </nav>
         </div>
     </header>
@@ -37,24 +37,11 @@
                 vero saepe nobis cum magni dolorem quod labore non voluptas quis cumque eum consectetur ad.
             </p>
         </section>
-        <!-- gallery section -->
-        <section class="gallery">
-            <h3>Heading 3</h3>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et aperiam, asperiores molestiae, aliquid, ea
-                in
-                vero saepe nobis cum magni dolorem quod labore non voluptas quis cumque eum consectetur ad.
-            </p>
-            <div class="popup" id="fullImgBox">
-                <img src="Memories 0.jpg" id="fullImg">
-                <span onclick="closeFullImg()">✖</span>
-            </div>
-            <div class="img-gallery">
-                <img src="images/photo-1.jpg" alt="Photo 1 description" onclick="openFullImg(this.src)">
-                <img src="images/photo-2.jpg" alt="Photo 2 description" onclick="openFullImg(this.src)">
-                <img src="images/photo-3.jpg" alt="Photo 3 description" onclick="openFullImg(this.src)">
-                <img src="images/photo-4.jpg" alt="Photo 4 description" onclick="openFullImg(this.src)">
-            </div>
+        <!-- form section -->
+        <section class="form">
+            <h3>
+                Form to go here!
+            </h3>
         </section>
     </main>
     <!-- footer -->
@@ -62,7 +49,6 @@
         <p class="container">&copy; Footer 2023</p>
     </footer>
 
-    <script src="js/gallery.js"></script>
 </body>
 
 </html>
