--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <footer>
         <p class="container">&copy; Footer 2023</p>
     </footer>
-
+    <!-- javascript for image gallery -->
     <script src="js/gallery.js"></script>
 </body>
 
